# rust-dominator-bootstrap

./: Cargo.toml  README.md  webpack.config.js
src/: app.rs  footer.rs  lib.rs  macros.rs  navbar.rs  parent.rs  routing.rs  utils.rs
src/page/: docs.rs  index.rs  index_header.rs  index_sec_1.rs  index_sec_2.rs  mod.rs  pricing.rs  signup.rs
src/static/: index.html
src/static/assets/css/: main.css  paper-kit.css
src/static/assets/img/: logo.xcf  logo_small.xcf
